Singlestat value: vertical alignment fix
There is a problem with vertical alignment of Singlestat value - it's a bit lower then it has to be.
This hack fix it.

--- a/public/sass/components/_panel_singlestat.scss
+++ b/public/sass/components/_panel_singlestat.scss
@@ -10,10 +10,15 @@
   display: table-cell;
   vertical-align: middle;
   text-align: center;
-  position: relative;
   z-index: 1;
   font-size: 3em;
   font-weight: bold;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding-bottom: 10px;
 }
 
 .singlestat-panel-prefix {
